--- a/blogs.html
+++ b/blogs.html
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="block-content" style="padding-top: 0px;margin-top: 0px;">
-                <div class="clean-blog-post">
+                <div class="clean-blog-post" style="background-color: white;">
                     <div class="row" style="padding: 9px;padding-top: 0px;margin-top: 36px;border-radius: 10px;border-width: 0.4px;border-style: solid;">
                         <div class="col-lg-5 col-xl-3 text-center align-self-center" style="border: var(--bs-primary-text-emphasis);"><img class="rounded img-fluid" src="assets/img/products/Custom%20Orders%202.jpg" style="height: 200px;"></div>
                         <div class="col-lg-7 col-xl-9 text-center text-lg-start text-xl-start text-xxl-start align-self-center">
@@ -62,7 +62,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="clean-blog-post">
+                <div class="clean-blog-post" style="background-color: white;">
                     <div class="row" style="padding: 9px;padding-top: 0px;margin-top: 36px;border-radius: 10px;border-width: 0.4px;border-style: solid;">
                         <div class="col-lg-5 col-xl-3 text-center align-self-center" style="border: var(--bs-primary-text-emphasis);"><img class="rounded img-fluid" src="assets/img/products/Custom%20Orders%202.jpg" style="height: 200px;"></div>
                         <div class="col-lg-7 col-xl-9 text-center text-lg-start text-xl-start text-xxl-start align-self-center">
@@ -72,7 +72,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="clean-blog-post">
+                <div class="clean-blog-post" style="background-color: white;">
                     <div class="row" style="padding: 9px;padding-top: 0px;margin-top: 36px;border-radius: 10px;border-width: 0.4px;border-style: solid;">
                         <div class="col-lg-5 col-xl-3 text-center align-self-center" style="border: var(--bs-primary-text-emphasis);"><img class="rounded img-fluid" src="assets/img/products/Custom%20Orders%202.jpg" style="height: 200px;"></div>
                         <div class="col-lg-7 col-xl-9 text-center text-lg-start text-xl-start text-xxl-start align-self-center">
