--- a/customorders.html
+++ b/customorders.html
@@ -42,7 +42,7 @@
     </nav>
     <section class="py-5">
         <div class="container py-4 py-xl-5">
-            <div class="row rounded" style="background-color: #f59596;padding-bottom: 24px;padding-top: 24px;">
+            <div class="row rounded" style="background-color: #d5f3fd;padding-bottom: 24px;padding-top: 24px;">
                 <div class="col-md-10 col-xl-10 text-center mx-auto">
                     <h1 style="font-family: Lobster, serif;"><span style="color: rgb(0, 0, 0);">Custom Orders</span></h1>
                     <p class="w-lg-50"><span style="color: rgb(0, 0, 0);">Explore our portfolio of unique creations and designs to inspire your custom order. Whether you have a specific design in mind or need some ideas, we’re here to bring your vision to life. Browse through our works and let’s create something special together!</span></p>
