--- a/blogs.html
+++ b/blogs.html
@@ -98,7 +98,7 @@
             </nav>
         </div>
     </section>
-    <footer style="background-color: #3b1f04;">
+    <footer style="background-color: #2f2624;">
         <div class="container py-4 py-lg-5">
             <div class="row justify-content-center">
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
