--- a/index.html
+++ b/index.html
@@ -528,6 +528,7 @@
     <script src="assets/js/bold-and-bright.js"></script>
     <script src="assets/js/Lightbox-Gallery-No-Gutters-baguetteBox.min.js"></script>
     <script src="assets/js/Lightbox-Gallery-No-Gutters-Lightbox-Gallery.js"></script>
+    <script src="assets/js/test.js"></script>
 </body>
 
 </html>
