--- a/pastries.html
+++ b/pastries.html
@@ -40,9 +40,9 @@
             </div>
         </div>
     </nav>
-    <section class="py-5" style="background-color: #e2ffc7;">
+    <section class="py-5">
         <div class="container py-4 py-xl-5">
-            <div class="row">
+            <div class="row" style="background-color: #e2ffc7;border-radius: 15px;padding-top: 15px;padding-bottom: 15px;">
                 <div class="col-md-10 col-xl-10 text-center mx-auto">
                     <h1 style="font-family: Lobster, serif;">Pastries</h1>
                     <p class="w-lg-50">Explore our delicious pastries. From classics to unique treats, find the perfect indulgence for any occasion. At The Little Baker Kitchen, we also specialize in customizing pastries to suit your preferences and special requests, simply send us a message! Enjoy happiness, one pastry at a time.</p>
