--- a/aboutus.html
+++ b/aboutus.html
@@ -55,7 +55,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row row-cols-1 row-cols-md-2 mx-auto rounded" style="max-width: 900px;background-color: #f0a49e;padding-top: 46px;margin-bottom: 47px;">
+            <div class="row row-cols-1 row-cols-md-2 mx-auto rounded" style="max-width: 900px;background-color: #d5f3fd;padding-top: 46px;margin-bottom: 47px;">
                 <div class="col-md-7 col-lg-6 col-xl-5 offset-lg-0 offset-xl-1 text-center order-md-last mb-5"><img class="rounded img-fluid shadow" src="assets/img/products/aboutus2.jpg" style="height: 300px;"></div>
                 <div class="col-md-5 col-lg-6 col-xl-6 offset-lg-0 d-md-flex align-self-center align-items-md-end align-items-lg-center mb-5">
                     <h5 class="fw-bold"><span style="font-weight: normal !important;">Since then, I’ve passionately pursued my baking journey, perfecting recipes and creating delightful treats that bring joy to others.</span></h5>
