--- a/blogs.html
+++ b/blogs.html
@@ -51,38 +51,7 @@
                     <div class="input-group input-group-sm"><span class="input-group-text">Search by title</span><input class="form-control" type="text" placeholder="Start typing..."><button class="btn btn-primary" type="button">Search</button></div>
                 </div>
             </div>
-            <div class="block-content" style="padding-top: 0px;margin-top: 0px;">
-                <div class="clean-blog-post" style="background-color: white;">
-                    <div class="row" style="padding: 9px;padding-top: 0px;margin-top: 36px;border-radius: 10px;border-width: 0.4px;border-style: solid;">
-                        <div class="col-lg-5 col-xl-3 text-center align-self-center" style="border: var(--bs-primary-text-emphasis);"><img class="rounded img-fluid" src="assets/img/products/Custom%20Orders%202.jpg" style="height: 200px;"></div>
-                        <div class="col-lg-7 col-xl-9 text-center text-lg-start text-xl-start text-xxl-start align-self-center">
-                            <h3 style="margin-top: 15px;">Lorem Ipsum dolor sit amet</h3>
-                            <div class="info"><span class="text-muted">Jan 16, 2018 by&nbsp;<a href="#">John Smith</a></span></div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p><button class="btn btn-primary" type="button" style="margin-bottom: 10px;">Read More</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="clean-blog-post" style="background-color: white;">
-                    <div class="row" style="padding: 9px;padding-top: 0px;margin-top: 36px;border-radius: 10px;border-width: 0.4px;border-style: solid;">
-                        <div class="col-lg-5 col-xl-3 text-center align-self-center" style="border: var(--bs-primary-text-emphasis);"><img class="rounded img-fluid" src="assets/img/products/Custom%20Orders%202.jpg" style="height: 200px;"></div>
-                        <div class="col-lg-7 col-xl-9 text-center text-lg-start text-xl-start text-xxl-start align-self-center">
-                            <h3 style="margin-top: 15px;">Lorem Ipsum dolor sit amet</h3>
-                            <div class="info"><span class="text-muted">Jan 16, 2018 by&nbsp;<a href="#">John Smith</a></span></div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p><button class="btn btn-primary" type="button" style="margin-bottom: 10px;">Read More</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="clean-blog-post" style="background-color: white;">
-                    <div class="row" style="padding: 9px;padding-top: 0px;margin-top: 36px;border-radius: 10px;border-width: 0.4px;border-style: solid;">
-                        <div class="col-lg-5 col-xl-3 text-center align-self-center" style="border: var(--bs-primary-text-emphasis);"><img class="rounded img-fluid" src="assets/img/products/Custom%20Orders%202.jpg" style="height: 200px;"></div>
-                        <div class="col-lg-7 col-xl-9 text-center text-lg-start text-xl-start text-xxl-start align-self-center">
-                            <h3 style="margin-top: 15px;">Lorem Ipsum dolor sit amet</h3>
-                            <div class="info"><span class="text-muted">Jan 16, 2018 by&nbsp;<a href="#">John Smith</a></span></div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p><button class="btn btn-primary" type="button" style="margin-bottom: 10px;">Read More</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <div class="block-content blogs-content" style="padding-top: 0px;margin-top: 0px;"></div>
         </div>
         <div class="d-flex justify-content-center" style="margin-top: 20px;">
             <nav class="text-secondary">
@@ -150,6 +119,7 @@
     <script src="assets/js/bold-and-bright.js"></script>
     <script src="assets/js/Lightbox-Gallery-No-Gutters-baguetteBox.min.js"></script>
     <script src="assets/js/Lightbox-Gallery-No-Gutters-Lightbox-Gallery.js"></script>
+    <script src="assets/js/test.js"></script>
 </body>
 
 </html>
