--- a/partycarts.html
+++ b/partycarts.html
@@ -185,7 +185,7 @@
                                                     <li class="list-group-item"><span>Puto w/ Cheese (Original / Ube)</span></li>
                                                     <li class="list-group-item"><span>Kutsinta w/ Grated Coconut</span></li>
                                                     <li class="list-group-item"><span>Buko Pandan Cups</span></li>
-                                                    <li class="list-group-item"><a href="pastries.html"><span style="color: rgb(0, 0, 0);">Any Many More!</span></a></li>
+                                                    <li class="list-group-item"><a class="btn btn-primary" role="button" href="pastries.html">See More Options</a></li>
                                                 </ul>
                                             </div>
                                         </div>
