--- a/testimonials.html
+++ b/testimonials.html
@@ -43,7 +43,7 @@
     <div class="container py-5" id="testimonials">
         <div class="row mb-5">
             <div class="col-md-8 col-xl-6 text-center mx-auto">
-                <p class="fw-bold text-success mb-2">Testimonials</p>
+                <p class="fw-bold text-success mb-2"><span style="color: rgb(247, 136, 137);">Testimonials</span></p>
                 <h2 class="fw-bold" style="font-family: Lobster, serif;"><strong>What Customers Say About us</strong></h2>
                 <p>No matter the design, our team can handle it. </p>
             </div>
