--- a/pastries.html
+++ b/pastries.html
@@ -47,7 +47,7 @@
                     <h1 style="font-family: Lobster, serif;">Pastries</h1>
                     <p class="w-lg-50">Explore our delicious pastries. From classics to unique treats, find the perfect indulgence for any occasion. At The Little Baker Kitchen, we also specialize in customizing pastries to suit your preferences and special requests, simply send us a message! Enjoy happiness, one pastry at a time.</p>
                 </div>
-                <div class="col-lg-4 offset-lg-4 text-center"><a class="btn btn-outline-primary" role="button" href="https://thelittlebakerkitchen.cococart.co" target="_blank">Order Here!</a></div>
+                <div class="col-lg-4 offset-lg-4 text-center"><a class="btn btn-primary" role="button" href="https://thelittlebakerkitchen.cococart.co" target="_blank">Order Here!</a></div>
             </div>
             <div class="row py-3">
                 <div class="col-sm-6 col-md-5 col-lg-3 offset-sm-1 offset-md-2 offset-lg-0 text-center">
