--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             </div>
         </div>
     </div>
-    <section style="background-color: #A5DCE1;">
+    <section style="background-color: #d5f3fd;">
         <div class="container py-4 py-xl-5">
             <div class="row gy-4 gy-md-0">
                 <div class="col-md-6 col-lg-7 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center">
