--- a/aboutus.html
+++ b/aboutus.html
@@ -66,7 +66,7 @@
                 <div class="col-sm-12 col-md-4 col-lg-4 col-xl-5 offset-lg-1 offset-xl-0 text-center mb-5"><img class="rounded img-fluid shadow" src="assets/img/products/aboutus3.png" width="276" height="402"></div>
                 <div class="col-md-8 col-lg-6 col-xl-7 offset-lg-1 offset-xl-0 d-md-flex align-self-center align-items-md-end align-items-lg-center mb-5">
                     <div>
-                        <h5 class="fw-bold"><span style="font-weight: normal !important;">I recently had the honor of representing the Philippines when I turned 19, at the Juniores World Pastry Cup 2024 held in Italy, where chefs under 23 from around the world showcased their artistic creations. </span><br><span style="font-weight: normal !important;">Team Philippines secured 5th place, and it was an incredible experience to be part of such a prestigious competition.</span></h5>
+                        <h5 class="fw-bold"><span style="font-weight: normal !important;">I recently had the honor of representing the Philippines when I turned 19, at the Juniores World Pastry Cup 2024 held in Italy, where chefs under 23 from around the world showcased their artistic creations. </span><br><br><span style="font-weight: normal !important;">Team Philippines secured 5th place, and it was an incredible experience to be part of such a prestigious competition.</span></h5>
                     </div>
                 </div>
             </div>
