--- a/pastries.html
+++ b/pastries.html
@@ -55,59 +55,13 @@
                 </div>
                 <div class="col-sm-4 col-md-3 col-lg-2 text-center">
                     <div class="dropdown"><button class="btn btn-primary btn-sm dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" data-bs-auto-close="outside" type="button">Categories</button>
-                        <div class="dropdown-menu dropdown-menu-dark"><a class="dropdown-item" href="#">Father’s Day Gift Sets</a><a class="dropdown-item" href="#">Christmas Gift Sets</a><a class="dropdown-item" href="#">Cake Trays and Tubs</a></div>
+                        <div class="dropdown-menu dropdown-menu-dark categories-dropdown"></div>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col">
-                    <h1 class="text-center" style="font-family: Lobster, serif;padding-bottom: 0px;margin-bottom: 26px;">Father’s Day Gift Sets</h1>
-                </div>
-            </div>
-            <div class="row gy-3 row-cols-1 row-cols-md-2 row-cols-xl-3">
-                <div class="col-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal1" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial1.jpg" width="330" height="400"></a>
-                        <div class="py-2">
-                            <h6 class="text-center">Box of 6 Chunkies</h6>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal2" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial2.jpg" width="330" height="400"></a>
-                        <div class="py-2">
-                            <h6 class="text-center">Nori Gift Box</h6>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal3" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial3.jpg"></a>
-                        <div class="py-2">
-                            <h6 class="text-center">Christmas Set</h6>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal4" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial4.jpg"></a>
-                        <div class="py-2">
-                            <h6 class="text-center">Pistachio Sansrival</h6>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal5" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial5.jpg"></a>
-                        <div class="py-2">
-                            <h6 class="text-center">Triple Chocolate Mousse</h6>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal6" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial6.jpg"></a>
-                        <div class="py-2">
-                            <h6 class="text-center">Test 34</h6>
-                        </div>
-                    </div>
-                </div>
-            </div><div>
+
+            <div class="pastries-db"></div>
+        <div>
     <div id="pictureModal1" class="modal fade" role="dialog" tabindex="-1" aria-labelledby="pictureModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
@@ -273,6 +227,7 @@
     <script src="assets/js/bold-and-bright.js"></script>
     <script src="assets/js/Lightbox-Gallery-No-Gutters-baguetteBox.min.js"></script>
     <script src="assets/js/Lightbox-Gallery-No-Gutters-Lightbox-Gallery.js"></script>
+    <script src="assets/js/pastries.js"></script>
 </body>
 
 </html>
