--- a/pastries.html
+++ b/pastries.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-<link rel="icon" type="image/x-icon" href="./assets/brands/Transparent Logo.png">
+    <link rel="icon" type="image/x-icon" href="./assets/img/brands/Transparent Logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Pastries - The Little Baker Kitchen</title>
     <link rel="icon" type="image/png" sizes="4200x3000" href="assets/img/brands/Transparent%20Logo.png">
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="assets/css/Pricing-Centered-icons.css">
     <link rel="stylesheet" href="assets/css/Stats-icons.css">
     <link rel="stylesheet" href="assets/css/untitled-1.css">
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+
 </head>
 
 <body>
@@ -40,6 +42,24 @@
             </div>
         </div>
     </nav>
+    <div
+            class="loading"
+            style="
+        background-color: white;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        align-items: center;
+        position: fixed;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        z-index: 9999;
+      "
+    >
+        <lottie-player src="https://lottie.host/5d1004d2-cceb-47f5-a290-6414e06abc02/TTsvzR1cPv.json" speed="1"  style="width: 300px; height: 300px;" loop autoplay></lottie-player>
+    </div>
     <section class="py-5">
         <div class="container py-4 py-xl-5">
             <div class="row" style="background-color: #e2ffc7;border-radius: 15px;padding-top: 15px;padding-bottom: 15px;">
@@ -227,6 +247,7 @@
     <script src="assets/js/bold-and-bright.js"></script>
     <script src="assets/js/Lightbox-Gallery-No-Gutters-baguetteBox.min.js"></script>
     <script src="assets/js/Lightbox-Gallery-No-Gutters-Lightbox-Gallery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="assets/js/pastries.js"></script>
 </body>
 
