--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <link rel="icon" type="image/x-icon" href="./assets/img/brands/Transparent Logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Pastries - The Little Baker Kitchen</title>
+    <title>404 Page Not Found - The Little Baker Kitchen</title>
     <link rel="icon" type="image/png" sizes="4200x3000" href="assets/img/brands/Transparent%20Logo.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
@@ -18,8 +18,6 @@
     <link rel="stylesheet" href="assets/css/Pricing-Centered-icons.css">
     <link rel="stylesheet" href="assets/css/Stats-icons.css">
     <link rel="stylesheet" href="assets/css/untitled-1.css">
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-
 </head>
 
 <body>
@@ -42,53 +40,15 @@
             </div>
         </div>
     </nav>
-    <div
-            class="loading"
-            style="
-        background-color: white;
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        align-items: center;
-        position: fixed;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        z-index: 9999;
-      "
-    >
-        <lottie-player src="https://lottie.host/5d1004d2-cceb-47f5-a290-6414e06abc02/TTsvzR1cPv.json" speed="1"  style="width: 300px; height: 300px;" loop autoplay></lottie-player>
-    </div>
     <section class="py-5">
         <div class="container py-4 py-xl-5">
-            <div class="row" style="background-color: #e2ffc7;border-radius: 15px;padding-top: 15px;padding-bottom: 15px;">
+            <div class="row">
                 <div class="col-md-10 col-xl-10 text-center mx-auto">
-                    <h1 style="font-family: Lobster, serif;">Pastries</h1>
-                    <p class="w-lg-50">Explore our delicious pastries. From classics to unique treats, find the perfect indulgence for any occasion. At The Little Baker Kitchen, we also specialize in customizing pastries to suit your preferences and special requests, simply send us a message! Enjoy happiness, one pastry at a time.</p>
+                    <h1 class="display-1" style="font-family: Lobster, serif;">Page Not Found</h1>
+                    <h2 style="font-family: 'Chelsea Market', serif;">Oops! Are you lost? Let's take you back home!</h2>
                 </div>
-                <div class="col-lg-4 offset-lg-4 text-center"><a class="btn btn-primary" role="button" href="https://thelittlebakerkitchen.cococart.co" target="_blank">Order Here!</a></div>
+                <div class="col-lg-4 offset-md-0 offset-lg-4 text-center" style="margin-top: 26px;"><a class="btn btn-primary" role="button" href="index.html">Back to home</a></div>
             </div>
-            <div class="row py-3">
-                <div class="col-sm-6 col-md-5 col-lg-3 offset-sm-1 offset-md-2 offset-lg-0 text-center">
-                    <h3 style="font-family: Lobster, serif;">Filter Category:</h3>
-                </div>
-                <div class="col-sm-4 col-md-3 col-lg-2 text-center">
-                    <div class="dropdown"><button class="btn btn-primary btn-sm dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" data-bs-auto-close="outside" type="button">Categories</button>
-                        <div class="dropdown-menu dropdown-menu-dark categories-dropdown"></div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="pastries-db"></div>
-        <div>
-    </div>
-        </div>
-        <div class="d-flex justify-content-center">
-            <nav class="text-secondary">
-                <ul class="pagination pagination-pastries">
-                </ul>
-            </nav>
         </div>
     </section>
     <footer style="background-color: #2f2624;">
@@ -143,8 +103,6 @@
     <script src="assets/js/bold-and-bright.js"></script>
     <script src="assets/js/Lightbox-Gallery-No-Gutters-baguetteBox.min.js"></script>
     <script src="assets/js/Lightbox-Gallery-No-Gutters-Lightbox-Gallery.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
-    <script src="assets/js/pastries.js"></script>
 </body>
 
 </html>
