--- a/customorders.html
+++ b/customorders.html
@@ -45,7 +45,7 @@
     <div
             class="loading"
             style="
-        background-color: white;
+        background-color: #f8fafc;
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
