--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div
             class="loading"
             style="
-        background-color: white;
+        background-color: #f5f5f5;
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
